# JobApplicationAPI

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: filtration.py  pagination.py
app/api/v1/: auth.py  health.py  job_applications.py
app/core/: config.py  security.py
app/core/models/: job_application.py  token.py
app/db/: base.py  connect.py
app/db/models/: job_application.py  user.py
app/utils/: logger.py  tags.py  token.py
migrations/: env.py
migrations/versions/: a0b2a9c02c10_initial.py  d442a7e45f60_add_foreign_key_constraint_for_user_id_.py  e925d52975b1_job_application_update_core.py
